--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <main>
@@ -16,6 +17,7 @@
                 <p class="current-score" id="current--0">0</p>
             </div>
         </section>
+        
         <section class="player player--1">
             <h2 class="name" id="name--1">Player 2</h2>
             <p class="score" id="score--1">34</p>
@@ -30,5 +32,6 @@
         <button class="btn btn--roll">Roll Dice</button>
         <button class="btn btn--hold">Hold</button>
     </main>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
